# gui-boilerplate

./: .gitignore  Note.md  Note2.md  README.md
cs/: App.xaml  App.xaml.cs  Document.md
cs/Models/: MainModel.js
cs/Views/: MainWindow.xaml.cs
cs/WVVM/: Behaviors.cs  Container.cs  CustomTag.cs
others/: README.md
others/di/: Cargo.toml
others/di/src/: includedir.rs  main.rs
others/di/src/di/: mod.rs  struct_base_dynamic_dispatch.rs  struct_base_static_dispatch.rs  trait_base.rs
others/di/src/examples/: a.rs  di.rs
wasm/: README.md  wasm_cs.html  wasm_pack.html  wasm_vanilla.html
wasm/wasm_pack/: Cargo.toml
wasm/wasm_pack/src/: lib.rs
wasm/wasm_vanilla/: Cargo.toml
wasm/wasm_vanilla/src/: lib.rs
wasm/wasmbrowser/Properties/: launchSettings.json
wasm/wasmbrowser/wwwroot/: index.html
webview-cs/: Architecture.md  Args.cs  README.md  WVVMSample.csproj
webview-cs/Models/: MainModel.cs
webview-cs/ViewModels/: MainViewModel.cs  MainViewModel.js
webview-cs/Views/: MainWindow.xaml
webview-cs/WVVM/: Base.cs  ConsoleEx.cs
webview-cs/resource/: app.js  viewmodel.js  vue.global.js  wvvm.js
webview-rust/: README.md
webview-rust/nptest/: Cargo.toml
webview-rust/nptest/src/: main.rs
webview-rust/web-view/: Cargo.toml
webview-rust/web-view/src/: main.rs
webview-rust/wry/: Cargo.toml
webview-rust/wry/src/: index.html  main.rs
webview-rust/wuzei/: Cargo.toml  index.html  test.csx
webview-rust/wuzei/src/: builder.rs  index_vue.html  logic.rs  main.rs  wuzei.rc
webview-rust/wuzei/src/resource/: index.html  index_vue.html
wry/: README.md
wry/webview/: Cargo.toml
wry/webview/src/: main.rs
