[package]
name = "wasm_pack"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "*"
wasm-timer = "*"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}

# [dependencies.web-sys]
# version = "0.3.4"
# features = [
#   'CanvasRenderingContext2d',
#   'Document',
#   'Element',
#   'HtmlCanvasElement',
#   'Window',
# ]