[package]
name = "wuzei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

anyhow = "*"
thiserror = "*"
colored = "*"
indoc = "*"

tempfile = "3.5.0"
clap = { version = "4.5.1", features = ["derive",] }
image = "0.24.9"
named_pipe = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }

[target.'cfg(windows)'.build-dependencies]  
windres = "0.2.2"
