[package]
name = "wuzei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.34.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
windows = { version = "*", features = ["Win32_System_Console",] }

anyhow = "*"
thiserror = "*"
colored = "*"
indoc = "*"
include_dir = "0.7.3"

tempfile = "3.5.0"
clap = { version = "4.5.1", features = ["derive",] }
image = "0.24.9"
tokio = { version = "1.36.0", features = ["full"] }

# use icon

[target.'cfg(windows)'.build-dependencies]  
windres = "0.2.2"
